--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     overflow-x: hidden;
     margin: 0;
@@ -45,7 +49,7 @@ body {
      
 }
 
-.cloud3 {
+.right-port {
     position: absolute;
     font-size: 10em;
     color: lightgray;
@@ -56,7 +60,7 @@ body {
      
 }
 
-.cloud4 {
+.left-port {
     position: absolute;
     font-size: 10em;
     color: #2ecab5;
@@ -67,12 +71,12 @@ body {
      
 }
 
-[data-aos^=zoom][data-aos^=zoom].aos-animate.cloud4 {
+[data-aos^=zoom][data-aos^=zoom].aos-animate.left-port {
     opacity: 1;
     transform: translateZ(0) scale(10.7) rotate(-90deg);
 }
 
-[data-aos^=zoom][data-aos^=zoom].aos-animate.cloud3 {
+[data-aos^=zoom][data-aos^=zoom].aos-animate.right-port {
     opacity: 1;
     transform: translateZ(0) scale(10.7) rotate(90deg);
 }
@@ -93,6 +97,173 @@ body {
     transform: scaleY(1);
 }
 
+
+/*_________________________MAIN-SECTION_____________________*/
+
+
+
+
+
+.contHide {
+
+     form {
+        position: fixed;
+        top:9em;
+        right:18em;
+        z-index: 15;
+        border-radius: 0.1em;
+        border: 2px solid grey;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2em;
+        color: white;
+        opacity: 0;
+        transition: 2s;
+     }
+
+
+     h2 {
+        font-family: 'Roboto Condensed', sans-serif;
+        position: fixed;
+        font-size: 4em;
+        top: 1em;
+        right: 6em;
+        color: black;
+        z-index: 15;
+        text-shadow: 0px 2px 16px rgba(0,0,0,0.31);
+        opacity: 0;
+        transition: 2.5;
+
+    }
+
+
+}
+
+
+
+.burger img {
+    position: fixed;
+    top: 0;
+    right: 2em;
+    width: 10em;
+    height: 8em;
+    z-index: 10;
+    
+}
+
+
+
+
+
+
+
+
+
+
+.contact {
+
+    .contShow {
+        width: 70em;
+        height: 70em;
+        border-radius: 50%;
+        background-color: grey;
+        position: fixed;
+        z-index: 10;
+        top: -18em;
+        right: 0;
+        transition: 1s;
+        animation-name: hello;
+
+        
+
+
+        form {
+            position: fixed;
+            top:9em;
+            right:18em;
+            z-index: 15;
+            border-radius: 0.1em;
+            border: 2px solid grey;
+            font-family: 'Roboto Condensed', sans-serif;
+            font-size: 1.2em;
+            color: white;
+            opacity: 100;
+            transition: 2s;
+
+
+
+            button {
+                font-size:1em;
+                padding: 1em;
+                border-radius: 0.1em;
+            }
+
+            .message {
+                height: 10em;
+                border-radius: 0.1em;
+                border: 2px solid grey;
+
+            }
+
+            
+
+
+            input {
+              border-radius: 0.1em;
+              border: 2px solid grey;
+              font-size: 1.2em;
+              background-color: rgb(224, 220, 220);
+              margin: 0.2em;
+              color: rgb(114, 112, 112);
+
+
+
+            }
+        }
+
+        h2 {
+            font-family: 'Roboto Condensed', sans-serif;
+            position: fixed;
+            font-size: 4em;
+            top:0em;
+            right: 13em;
+            color: white;
+            z-index: 15;
+            text-shadow: 0px 2px 16px rgba(0,0,0,0.31);
+            opacity: 100;
+
+
+
+        }
+    }
+    
+
+    img {
+        width: 15em;
+        height: 8em;
+        display: inline-block;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        z-index: 12;
+        -webkit-filter : hue-rotate(180deg);
+        filter : hue-rotate(180deg);
+        transition: 1s;
+
+    }
+    img:hover {
+        width: 17em;
+        height: 9em;
+        transition: 1s;
+    }
+}
+
+
+
+
+
+
+
+
 header {
     background-image: url("../img/vietnam-hero.jpeg");
     background-size: cover;
@@ -111,6 +282,7 @@ header {
         color: white;
         font-size: 2em;
         font-family: 'Advent Pro', sans-serif;
+
 
         .logo {
             font-family: 'Great Vibes', cursive;
@@ -173,15 +345,23 @@ header {
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.1em;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     flex-grow: 1;
+    height: 40em;
+
+    h2 {
+        font-size: 5em;
+        margin-left: 3em;
+    }
 
     .headlines {
         display: flex;
         justify-content: center;
-        padding-left: 5em;
+        padding-right: 30em;
 
         div {
+            font-size: 1.1em;
             text-align: center;
             width: 15em;
             padding-left: 5em;
