--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -101,24 +101,181 @@ body {
 /*_________________________MAIN-SECTION_____________________*/
 
 
+body
+
+
+a
+{
+  text-decoration: none;
+  color: #232323;
+  font-size: 0.2em;
+  
+  transition: color 0.3s ease;
+}
+
+a:hover
+{
+  color: tomato;
+}
+
+.logo {
+    font-size: 20em;
+    color: white;
+
+}
+
+#menuToggle
+{
+  display: block;
+  position: fixed;
+  top: 1.2em;
+  left: 50px;
+  color:#232323;
+  
+  z-index: 2000;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  color:black;
+  background-color: black;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  
+  //Hamburger color
+  background: #232323;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 100vw;
+  height: 120vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 30px;
+}
+
+#menu li .logo1 {
+    font-size: 20em;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+
 
 
 
 .contHide {
-
-    width: 90em;
-    height: 90em;
-    border-radius: 50%;
-    background-color: grey;
     position: fixed;
     z-index: 10;
-    top: -5em;
-    right: -37.5em;
-    transform: scale(0.07);
-    transition: 0.8s;
+    margin: 2.5em 9em;
+    transition: 1s;
+    opacity: 0;
     -webkit-box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
     -moz-box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
     box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
+    border-radius: 1em;
 
 
 
@@ -126,29 +283,32 @@ body {
 
      form {
         position: fixed;
-        top:20em;
-        right:18em;
         z-index: 15;
+        margin: 0 auto;
         border-radius: 0.1em;
-        border: 2px solid grey;
-        font-family: 'Roboto Condensed', sans-serif;
         font-size: 1.2em;
-        color: white;
+        color: #FFFFFF;
         opacity: 0;
+     }
+
+     h3 {
+         color:#333333;
+         margin:0;
+         padding-left:0.3em;
+
      }
 
 
      h2 {
-        font-family: 'Roboto Condensed', sans-serif;
         position: fixed;
         font-size: 4em;
         top: 4em;
         right: 6em;
-        color: black;
+        color: #333333;
         z-index: 15;
-        text-shadow: 0px 2px 16px rgba(0,0,0,0.31);
         opacity: 0;
         transition: 2.5 ;
+        padding-left: 0.1em;
 
     }
 
@@ -165,19 +325,21 @@ body {
 
 
 .contact {
+    font-family: 'Poppins', sans-serif;
 
     .contShow {
-        width: 90em;
-        height: 90em;
-        border-radius: 50%;
-        background-color: grey;
+        width: 80vw;
+        height: 90vh;
+        background-color: #FFFFFF;
         position: fixed;
         z-index: 10;
-        top: -18em;
-        right: 0;
-        transition: 0.2s ease-in;
-        transform: scale(1);
+        margin: 2.5em 9em;
+        transition: 0.7s ease-in;
         opacity: 100;
+        -webkit-box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
+        -moz-box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
+        box-shadow: -1px -2px 300px -30px rgba(0,0,0,0.43);
+        border-radius: 1em;
             
 
         
@@ -185,42 +347,52 @@ body {
 
         form {
             position: fixed;
-            top:20em;
-            left: 12em;
             z-index: 15;
+            top: 11em;
+            left: 20em;
             border-radius: 0.1em;
-            border: 2px solid grey;
-            font-family: 'Roboto Condensed', sans-serif;
             font-size: 1.2em;
-            color: white;
+            color: #FFFFFF;
             opacity: 100;
-            transition: 2s;
+            transition: 1s;
 
 
 
             button {
+                margin-top: 1em;
                 font-size:1em;
                 padding: 1em;
-                border-radius: 0.1em;
+                border-radius: 2em;
+                background-color:rgb(240, 177, 52);
+                color: #ffffff;
+                border: none;
+                outline: none;
+                text-shadow: -1px -2px 300px -30px rgba(0, 0, 0, 0.726);
             }
 
             .message {
                 height: 10em;
                 border-radius: 0.1em;
-                border: 2px solid grey;
-
+                outline: none;
+                border: none;
+                border-bottom: 2px solid grey;
+                font-size: 1em;
+                color: rgb(114, 112, 112);
             }
 
             
 
 
             input {
-              border-radius: 0.1em;
-              border: 2px solid grey;
-              font-size: 1.2em;
-              background-color: rgb(224, 220, 220);
-              margin: 0.2em;
-              color: rgb(114, 112, 112);
+                border-radius: 0.1em;
+                font-size: 1.2em;
+                outline: none;
+                border: none;
+                border-bottom: 2px solid grey;
+                background-color:#FFFFFF;
+                margin: 0.2em;
+                color: rgb(114, 112, 112);
+                
 
 
 
@@ -228,14 +400,12 @@ body {
         }
 
         h2 {
-            font-family: 'Roboto Condensed', sans-serif;
             position: fixed;
-            font-size: 4em;
-            top:4em;
-            right: 13em;
-            color: white;
+            font-size: 3em;
+            left: 7.9em;
+            top: 2em;
+            color: #333333;
             z-index: 15;
-            text-shadow: 0px 2px 16px rgba(0,0,0,0.31);
             opacity: 100;
 
 
@@ -244,17 +414,27 @@ body {
     }
     
 
-    img {
+    #contact {
         width: 15em;
         height: 8em;
         display: inline-block;
         position: fixed;
-        bottom: 0;
+        bottom: 5.4em;
         right: 0;
         z-index: 12;
         -webkit-filter : hue-rotate(180deg);
         filter : hue-rotate(180deg);
         transition: 1s;
+        @media all and (max-width: 480px) {
+            right: -2em;
+            bottom: 1em;
+            width: 11.5em;
+            height: 6em;
+
+        
+    
+        }
+    
 
     }
 }
@@ -276,6 +456,17 @@ header {
     -moz-box-shadow: 0px 17px 120px -16px rgba(0,0,0,0.75);
     box-shadow: 0px 17px 120px -16px rgba(0,0,0,0.75);
 
+    @media all and (max-width: 480px) {
+        background-size: 70em;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        -webkit-clip-path: none;
+        clip-path: none;
+        background-position-x: -600px;
+
+    }
+
 
     .navigation {
         display: flex;
@@ -285,10 +476,33 @@ header {
         font-size: 2em;
         font-family: 'Advent Pro', sans-serif;
 
+        @media all and (max-width: 480px) {
+            background-color: white;
+            position: fixed;
+            top: 0;
+            width: 100vh;
+            height: 2em;
+            z-index: 1000;
+            box-shadow: 0px 17px 120px -16px rgba(0, 0, 0, 0.164);
+        }
+
 
         .logo {
             font-family: 'Great Vibes', cursive;
             font-size: 1.7em;
+
+            @media all and (max-width: 480px) {
+                width: 8em;
+                position: fixed;
+                font-size: 1.2em;
+                top: 0.2em;
+                margin: 0 auto;
+                
+                
+                
+                color:#333333;
+
+            }
                
         }
 
@@ -307,6 +521,10 @@ header {
             text-decoration-line: none;
             color:white;
             padding-right: 0.5em;
+
+            @media all and (max-width: 480px) {
+                display: none;
+            }
             
         }
 
@@ -340,7 +558,18 @@ header {
         font-size: 2em;
         line-height: 1.8em;
         text-shadow: 4px 0px 13px #000000;
+        
     }
+    @media all and (max-width: 480px) {
+        .important {
+          font-size: 1.5em; 
+          padding-left: 7em;
+          line-height: 1.6em;
+          padding-top: 6em;
+
+        }
+      }
+      
 }
 
 .about-me {
@@ -355,12 +584,37 @@ header {
     h2 {
         font-size: 5em;
         margin-left: 3em;
+
+        @media all and (max-width: 480px) {
+
+            font-size: 4em;
+            text-align: center;
+            width: 5em;
+            margin: 0 auto;
+            margin-top: 1em;
+            
+            
+
+        }
+
+
+
     }
 
     .headlines {
         display: flex;
         justify-content: center;
         padding-right: 30em;
+
+        @media all and (max-width: 480px) {
+            flex-direction: column;
+            width: 22em;
+            margin: 0 auto;
+            margin-top: 12em;
+            padding-right: unset;
+        }
+
+        
 
         div {
             font-size: 1.1em;
@@ -378,6 +632,11 @@ header {
     h2 {
         text-align: center;
         font-size: 6em;
+        
+        @media all and (max-width: 480px) {
+            margin-top: 4em;
+            font-size: 4em;
+        }
     }
 
     .cloud2 {
@@ -397,10 +656,21 @@ header {
         font-size: 1em;
         font-weight: bold;
 
+        @media all and (max-width: 480px) {
+            width: 20em;
+            margin: 0 auto;
+        }
+
         > div{
             display: flex;
             height: 2.8em;
             margin-bottom: 0.6em;
+
+            @media all and (max-width: 480px) {
+                height: 2.2em;
+            }
+
+
         }
 
         .name {
@@ -414,6 +684,13 @@ header {
             border-top-left-radius: 6px;
             border-bottom-left-radius: 6px;
             font-size: 1.3em;
+
+            @media all and (max-width: 480px) {
+               width: 1em;
+               font-size: 0.8em;
+               padding:0.7em 3em;
+
+            }
             
          }
 
@@ -468,6 +745,19 @@ header {
             position: absolute;
             left: 35em;
             top: 0.5em;
+
+
+            @media all and (max-width: 480px) {
+                font-size: 1.3em;
+            position: absolute;
+            left: 11.5em;
+            top: 0.7em;
+            font-size: 1em;
+ 
+             }
+
+
+            
         }
 
     }
